<resources>
    <string name="app_name">Amaken</string>
    <string name="title_activity_sign_up_user">Create a User Account</string>
    <string name="title_activity_sign_up_business">Create a Business Account</string>
    <string name="title_activity_sign_up_chooser">Choose a Sign Up Method</string>
    <string name="title_activity_login">Choose a Login Method</string>
    <string name="title_activity_add_review">Add a Review</string>
    <string name="title_activity_nav_drw"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Change Settings</string>
    <string name="facebook_app_id">1963319577234405</string>
    <string name="chathead_click_message">Click</string>
    <string name="finish_deleted">FloatingView has been deleted.</string>
    <string name="deleted_soon">FloatingView will be deleted soon.</string>
    <string name="touch_finished_position" formatted="false">Current position (%d,%d)</string>
    <string name="chathead_content_title"> Chat: Active</string>
    <string name="content_text"> running.</string>
    <string name="pref_header_general">Language</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>English</item>

    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change_your_profile_picture"><u>Change Profile Picture</u></string>
    <string name="title_activity_business_profile_places">My Places</string>
    <string name="title_activity_business_profile_events">My Events</string>
    <string name="title_activity_profile_bookmarks">My Bookmarks</string>
    <string name="title_activity_profile_likes">My Likes</string>
    <string name="title_activity_profile_reviews">My Reviews</string>
    <string name="title_activity_profile_categories">My Categories</string>
    <string name="title_activity_add_place">Add a New Place</string>
    <string name="title_activity_add_event">Add a New Event</string>
    <string name="title_activity_expand_details_maps">Details</string>
    <string name="Title_Dialog_photo">Adding a Photo</string>
    <string name="Option1_Dialog_photo">Choose from Gallery</string>
    <string name="Option2_Dialog_photo">Take a Photo</string>
    <string name="Option3_Dialog_photo">Clear a photo</string>
    <string name="hint_Dialog">Add Description</string>
    <string name="desc">Description </string>
    <string name="done">done</string>
    <string name="Title_Dialog_loction">Adding a Location</string>
    <string name="Option1_Dialog_loction">street name </string>
    <string name="Option2_Dialog_loction">coordination</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="user_name">User Name</string>
    <string name="gender_text">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="sign_up">SIGN UP</string>
    <string name="places_text_view">Places</string>
    <string name="events_text_View">Events</string>
    <string name="bookmarks_text_view">Bookmarks</string>
    <string name="likes_text_view">Likes</string>
    <string name="reviews_text_view">Reviews</string>
    <string name="categories_text_view">Categories</string>
    <string name="enter_event_name">Enter Event name</string>
    <string name="description_the_event">Description the Event</string>
    <string name="event_location">Event Location</string>
    <string name="event_photo">Event photo</string>
    <string name="event_date">Event date</string>
    <string name="event_category">Event category</string>
    <string name="event_country">Country</string>
    <string name="enter_place_name">Enter place name</string>
    <string name="description_the_place">Description the place</string>
    <string name="location">Location</string>
    <string name="place_photo">Place photo</string>
    <string name="place_category">Place category</string>
    <string name="bookmarks_text">Bookmarks</string>
    <string name="likes_text">Likes</string>
    <string name="reviews_text">Reviews</string>
    <string name="categories_text">Categories</string>
    <string name="events_text">Events</string>
    <string name="place_details_text">Place Details:</string>
    <string name="place_name_text">Place Name:</string>
    <string name="place_category_text">Place Category:</string>
    <string name="rating_average_text">Rating Average:</string>
    <string name="description_text">Description:</string>
    <string name="here_details_about_the_place_text">Here details about the place, here details about the place, here details about the place..here details about the place, here details about the place</string>
    <string name="contact_details_text">Contact Details:</string>
    <string name="business_owner_text">Business Owner:</string>
    <string name="business_owner_name_text">Business owner name</string>
    <string name="business_web_text">Business Web:</string>
    <string name="business_phone_text">Business Phone:</string>
    <string name="business_email_text">Business Email:</string>
    <string name="location_details_text">Location Details:</string>
    <string name="country_text">Country:</string>
    <string name="country_name_text">country name</string>
    <string name="city_text">City:</string>
    <string name="city_name_text">city name</string>
    <string name="address_text">Address:</string>
    <string name="address_of_the_place_text">address of the place</string>
    <string name="people_s_thoughts_text">People\'s Thoughts:</string>
    <string name="event_details_text">Event Details:</string>
    <string name="event_name_text">Event Name:</string>
    <string name="event_category_text">Event Category:</string>
    <string name="description_">Description:</string>
    <string name="date_details_text">Date Details:</string>
    <string name="event_date_text">Event Date:</string>
    <string name="event_time_text">Event Time:</string>
    <string name="event_days_text">Event Days:</string>
    <string name="your_review_wil_be_posted_publicly_on_the_app_text">Your review wil be posted publicly on the app</string>
    <string name="describ_your_experience_text">Describ your experience</string>
    <string name="cancel_text">CANCEL</string>
    <string name="post_text_button">POST</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_">Password</string>
    <string name="business_name_hint">Business Name</string>
    <string name="business_web_url_optional_hint">Business Web URL (optional)</string>
    <string name="business_phone_number_hint">Business Phone Number (optional)</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_up_as_text">Sign Up as..</string>
    <string name="business_text">Business</string>
    <string name="user_text">User</string>
    <string name="expand_text"><![CDATA[Expand >>]]></string>
    <string name="home_text">Home</string>
    <string name="latest_events_text">Latest Events</string>
    <string name="notifications_text">Notifications</string>
    <string name="edit_text">Edit</string>
    <string name="profile_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="communicate_text">Communicate</string>
    <string name="invite_a_friend_text">Invite a Friend</string>
    <string name="help_text">Help</string>
    <string name="logout_text">Logout</string>
    <string name="view_text">View</string>
    <string name="edit_">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="remove_text">Remove</string>
    <string name="unlike_text">Unlike</string>
    <string name="search_text">Search</string>
    <string name="action_deep_link">com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION</string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is amazing </string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="facebook_access_token">EAACEdEose0cBAOE6KST3jgZCBDJINoYGOZCwoGfq0LQGwavgM5QpeEvEQC5cFbrKw0ZBoakaxaZBgegZAXKZBbn9vr7sHxd13z86sb9QhVeZAxxPiDpCaeyCAZCTI9ShK9EIP47WRWOJJNVOxVGN1TF3X0usj8PBa02iq4bmpl4ZCTf1WPVDDqMsb6VohE7WVoMUZD</string>
    <string name="server_client_id">391715754684-51i6rejh7f7bc03enkibvqeno7mnec0i.apps.googleusercontent.com</string>
    <string name="cofes_text">Cofes</string>
    <string name="education_text">Education</string>
    <string name="entertainment_text">Entertainment</string>
    <string name="hair_stylists_text">Hair Stylists</string>
    <string name="hotels_text">Hotels</string>
    <string name="hospitals_text">Hospitals</string>
    <string name="malls_text">Malls</string>
    <string name="parks_text">Parks</string>
    <string name="restaurants_text">Restaurants</string>
    <string name="sap_and_leisure_text">Sap</string>
    <string name="sport_text">Sport</string>
    <string name="tourism_text">Tourism</string>
    <string name="edit_button">edit</string>
    <string name="save_button">Save</string>
    <string name="add_event_title_fab"> <b>Add Event</b> </string>
    <string name="add_place_title_fab">Add Place</string>
</resources>