<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/topMenu">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/home_text" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/latest_events_text" />
        <item
            andro
            android:icon="@drawable/ic_notifications"
            android:title="Notifications" />
        <item
            android:id="@+id/nav_Discover"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="Discover places" />



    </group>
    <group
        android:id="@+id/editMenu">
        <item android:title="@string/edit_text">
            <menu>
                <group
                    android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_edit_black_24dp"
                    android:title="@string/profile_text" />
                <item android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings_text" />
                </group>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/communicateMenu"
        >
    <item android:title="@string/communicate_text">
        <menu>
            <group
                android:checkableBehavior="single">
            <item android:title="@string/invite_a_friend_text"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:id="@+id/nav_invites" />
            </group>

        </menu>
    </item>
    </group>


    <group
        android:id="@+id/bottomMenu"
        android:checkableBehavior="single">

                <item android:id="@+id/nav_Help"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/help_text" />

                <item android:id="@+id/nav_Logout"
                    android:icon="@drawable/ic_exit_to_app"
                    android:title="@string/logout_text" />

    </group>
</menu>
