<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Title_Dialog_photo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Dialog"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonFromGall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Option1_Dialog_photo" />

    <Button
        android:id="@+id/buttonTakephoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Option2_Dialog_photo" />

    <Button
        android:id="@+id/buttonClearphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Option3_Dialog_photo" />


    <Button
        android:id="@+id/buttonDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/done" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

</LinearLayout>
