<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up_business"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amakenapp.website.amakenapp.activities.SignUpBusiness"
    tools:showIn="@layout/activity_sign_up_business">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/businessEmail"
            android:hint="@string/email_address_text"
            android:selectAllOnFocus="false"
            android:allowUndo="true"
            android:textColor="#009688"
            android:textColorHint="#9B9B9B"
            android:textColorLink="#9B9B9B"
            android:layout_marginTop="22dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/businessPassword"
            android:hint="@string/password_"
            android:textColorHint="#9B9B9B"
            android:layout_marginTop="12dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/businessName"
            android:hint="@string/business_name_hint"
            android:textColorHint="#9B9B9B"
            android:textColor="#9B9B9B"
            android:paddingStart="15dp"
            android:paddingLeft="15dp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/businessWebUrl"
            android:hint="@string/business_web_url_optional_hint"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/businessPhoneNumber"
            android:hint="@string/business_phone_number_hint"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp" />
        <TextView
            android:text="@string/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColor="#A47A51"
            android:textSize="@dimen/FontSize"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp" />
        <Spinner
            android:id="@+id/sign_up_business_countries_spinner_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:spinnerMode="dialog"
            android:background="@android:drawable/btn_dropdown"/>
        <TextView
            android:text="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textColor="#A47A51"
            android:textSize="@dimen/FontSize"
            android:paddingLeft="10dp" />
        <Spinner
            android:id="@+id/sign_up_business_cities_spinner_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:spinnerMode="dialog"
            android:background="@android:drawable/btn_dropdown"/>

        <Button
            android:text="@string/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpBusiness"
            android:background="#15AFD8"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp" />

    </LinearLayout>
</ScrollView>

    </RelativeLayout>
