<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amakenapp.website.amakenapp.activities.SignUpUser"
    tools:showIn="@layout/activity_sign_up_user">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/UserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="text"
                    android:textSize="@dimen/FontSize"
                    android:textColor="#15AFD8"
                    android:textColorHint="#15AFD8"
                    android:textColorLink="#15AFD8" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/User_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                app:passwordToggleEnabled="true">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/UserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textSize="@dimen/FontSize" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/UserName_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="25dp"
                >


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textSize="@dimen/FontSize"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:text="@string/gender_text"
                android:textSize="@dimen/FontSize"
                android:textColor="#A47A51"/>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="#15AFD8"
                    android:textColorLink="#15AFD8"
                    android:textSize="@dimen/FontSize"/>

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#15AFD8"
                    android:text="@string/female"
                    android:textSize="@dimen/FontSize"/>


            </RadioGroup>

            <TextView
                android:text="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="#A47A51"
                android:textSize="@dimen/FontSize"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp" />

            <Spinner
                android:id="@+id/sign_up_user_countries_spinner_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dialog" />
            <TextView
                android:text="@string/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textColor="#A47A51"
                android:textSize="@dimen/FontSize"
                android:paddingLeft="10dp" />
            <Spinner
                android:id="@+id/sign_up_user_cities_spinner_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:spinnerMode="dialog"

                android:background="@android:drawable/btn_dropdown"/>

            <Button
                android:id="@+id/button_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#15AFD8"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/FontSize" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>